--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "gatsby-source-filesystem": "^4.23.0",
     "gatsby-source-graphql": "^4.23.0",
     "gatsby-transformer-sharp": "^4.23.0",
+    "masonry-layout": "^4.2.2",
+    "photoswipe": "^5.3.2",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
