--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "photoswipe": "^5.3.2",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "prettier": "^2.7.1"
